<resources>
    <string name="app_nome">MindBit</string>
    <string name="img_descricao">icone do app</string>

    <!-- Toast & Notificações -->
    <string name="cadastro_nome_vazio">Nome obrigatório!</string>
    <string name="cadastro_email_vazio">Email obrigatório!</string>
    <string name="cadastro_senha_confirm_vazia">Confirme a senha!</string>
    <string name="cadastro_email_curto">Seu email deve ter mais de 4 caracteres!</string>
    <string name="cadastro_email_invalido">Email inválido!</string>
    <string name="cadastro_senha_invalida">Senha inválida</string>
    <string name="cadastro_senhas_diferentes">Senhas diferentes</string>

    <string name="cadastro_edt_nome">Nome</string>
    <string name="cadastro_edt_login">Nome de usuário</string>
    <string name="cadastro_edt_senha">Senha</string>
    <string name="cadastro_edt_confirmar_senha">Confirmar senha</string>
    <string name="cadastro_edt_email">Email</string>
    <string name="cadastro_sucesso">Usuário cadastrado com sucesso</string>


    <string name="login_vazio">Login obrigatório!</string>
    <string name="login_invalido">Login inválido</string>
    <string name="login_curto">Seu login deve ter mais de 4 caracteres!</string>
    <string name="login_senha_curta">Sua senha deve ter mais de 4 caracteres!</string>
    <string name="login_sucesso">Bem-vind@,</string>
    <string name="login_erro">Login e/ou Senha incorretos!</string>
    <string name="login_senha_vazia">Senha obrigatória!</string>

    <string name="login_edt_login_hint">Nome de usuário</string>
    <string name="login_edt_senha_hint">Senha</string>


    <string name="addEvento_edt_descricao">Insira a descrição! </string>
    <string name="addEvento_edt_data_inicial">Insira a data inicial!</string>
    <string name="addEvento_edt_data_final">Insira a data final!</string>
    <string name="addEvento_edt_hora_inicial">Insira a hora inicial!</string>
    <string name="addEvento_edt_hota_final">Insira a hora final!</string>
    <string name="addEvento_edt_descricao_curta">A descrição deve ter mais de 4 caracteres!</string>
    <string name="addEvento_edt_data_hora_erro">Data/Hora não válidos!</string>


    <!-- Button -->
    <string name="login_btn_logar">Entrar</string>
    <string name="login_btn_cadastrar">Não é cadastrado ? Cadastre-se</string>
    <string name="cadastro_btn">Cadastrar</string>

    <!--Float Button -->
    <string name="amigo">Amigo</string>
    <string name="disciplina">Disciplina</string>
    <string name="nota">Nota</string>
    <string name="evento">Evento</string>

    <!-- Text -->
    <string name="contagem_regressiva">Próximos eventos:\n</string>
    <string name="contagem_nula">não há eventos futuros \n\nDescanse ;)</string>
    <string name="title_activity_navigation"></string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_usuario_nome">Username</string>
    <string name="navigation_usario_email">username@host.com</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_pesquisar_evento">Pesquisar Eventos</string>
    <string name="activity_pesquisar_evento_vazio">"Nenhum evento encontrado"</string>
    <string name="title_activity_add_evento">Adicionar Eventos</string>

    <string name="add_amigo_sucesso">Amig@ adicionad@ com sucesso</string>

    <string name="nav_drawer_pesquisar_eventos">Pesquisar Eventos</string>
    <string name="nav_drawer_config">Configurações</string>
    <string name="nav_drawer_amigos">Adicionar Amigo</string>
    <string name="nav_drawer_disciplinas">Disciplinas</string>
    <string name="nav_drawer_comunicacao">Comunicação</string>
    <string name="nav_drawer_compartilhar">Compartilhar</string>
    <string name="nav_drawer_sobre">Sobre</string>

    <string name="btn_add_evento">Adicionar</string>
    <string name="evento_nome">Nome</string>
    <string name="evento_descricao">Descrição</string>
    <string name="evento_data_inicio">Data Início</string>
    <string name="evento_data_fim">Data Fim</string>
    <string name="evento_hora_inicio">Hora Início</string>
    <string name="evento_hora_fim">Hora Fim</string>
    <string name="nav_drawer_add_evento">Adicionar Evento</string>
    <string name="nav_drawer_add_disciplina">Adicionar Disciplina</string>
    <string name="listview_evento_data">Data:</string>

    <string name="btn_add_disciplina">Adicionar</string>
    <string name="disciplina_nome">Nome da Disciplina</string>
    <string name="disciplina_codigo">Código da Disciplina</string>
    <string name="add_disciplina_nome_vazio">Nome obrigatório!</string>
    <string name="add_disciplina_codigo_vazio">Código obrigatório!</string>
    <string name="add_disciplina_tamanho_nome_invalido">O nome deve ter mais de 3 caracteres</string>
    <string name="add_disciplina_tamanho_codigo_invalido">O código deve ter 5 caracteres</string>
    <string name="add_disciplina_erro">Disciplina já cadastrada</string>
    <string name="add_disciplina_sucesso">Disciplina cadastrada com sucesso!</string>
    <string name="evento_btn_adicionar">Adicionar</string>
    <string name="add_evento_sucesso">"Evento cadastrado com sucesso"</string>

    <string name="contador_nome_evento">Nome do Evento</string>
    <string name="contador_vazio">Sem eventos no mês</string>
    <string name="contador_dias">Dia(s)</string>
    <string name="contador_hoje">Hoje</string>
    <string name="data_inicio_evento">\nData/Hora de início: </string>
    <string name="data_fim_evento">\nData/Hora de término: </string>

    <string name="add_amigo_email">E-mail do amigo</string>
    <string name="add_amigo_nome">Nome do amigo</string>
    <string name="btn_add_amigo">Adicionar</string>
    <string name="email_vazio">Digite um e-mail</string>
    <string name="nome_vazio">Insira um nome</string>

    <string name="compartilhar">Compartilhar para:</string>
    <string name="assinatura_email">\nAtenciosamente, \n</string>
    <string name="rodape_email">\nvia MindBit - https://sites.google.com/site/mindbitufrpe/</string>
    <string name="checkbox_evento_vazio">Escolha algum evento</string>
    <string name="checkbox_amigo_vazio">Escolha algum amigo</string>
    <string name="compartilhar_email_assunto">MindBit - Alguém compartilhou eventos com você!</string>


    <string name="activity_sobre">Sobre</string>
    <string name="sobre_nome">MindBit</string>
    <string name="sobre_descricao">Projeto para segunda VA de Modelagem e Programação Orientada a Objetos (MPOO) do curso de Sistema de Informação, lecionada pelo professor Gabriel Alves na Universidade Federal Rural de Pernambuco (UFRPE).</string>
    <string name="sobre_desenvolvedores">Desenvolvedores:</string>
    <string name="sobre_ariana">Ariana Lima</string>
    <string name="sobre_bernardo">Bernardo Junior</string>
    <string name="sobre_bruna">Bruna Vasconcelos</string>
    <string name="sobre_gabriel">Gabriel Maia</string>
    <string name="sobre_tiago">Tiago Sitonio</string>
    <string name="sobre_victor">Victor Leuthier</string>


</resources>